# Teleportal-GCSWIN

./: CMakeLists.txt  README.md
src/: VideoReceiver.cpp  main.cpp  mainwindow.cpp
src/inc/: mainwindow.h  moc_VideoReceiver.cpp  moc_VideoReceiver.cpp_parameters  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters  moc_qFlightInstruments.cpp  moc_qFlightInstruments.cpp_parameters
translation/: en_AU.ts
